# checkers-app

./: .gitignore  README.md  docker-compose.yml  mosquitto.conf  mosquitto.sh  realm-export.json
api/: Cargo.toml
api/src/: checkers.rs  db.rs  game.rs  game_controller.rs  main.rs  structs.rs  utils.rs
api/src/chat/: chat_route.rs  connection.rs  controller.rs  lobby.rs  messages.rs  mod.rs  session.rs
api/src/checkers/: board.rs  gamestate.rs  mod.rs  tests.rs  vector.rs
api/src/crud/: mod.rs
api/src/crud/comments/: controllers.rs
api/src/crud/games/: controllers.rs  logic.rs  mod.rs
api/src/crud/users/: controllers.rs
api/src/db/: comment.rs  game.rs  mod.rs  user.rs
api/src/games/: controllers.rs  db.rs  logic.rs  mod.rs
api/src/schema/: auth.rs  comment.rs  forum.rs  game.rs  mod.rs  pawn.rs  post_bodies.rs  user.rs
api/src/structs/: gamemove.rs  mod.rs  pawn.rs  post_bodies.rs
frontend/: index.html  jsconfig.json  keycloak.json  package.json  vite.config.js
frontend/public/: example.json
frontend/src/: App.jsx  board.json  main.jsx
frontend/src/components/: BaseContainer.jsx  BaseView.jsx  Navlink.jsx  SideBar.jsx
frontend/src/game/: Checkers.js
frontend/src/providers/: GameContextProvider.jsx  GamestateReducer.js
frontend/src/providers/Chat/: ChatContext.jsx
frontend/src/providers/Checkers/: GameContextProvider.jsx  GamestateActions.js  GamestateReducer.js
frontend/src/services/: AccountService.js  KeycloakService.js
frontend/src/styles/: _variables.scss  index.css
frontend/src/views/: RenderOnAuth.js  Sidebar.jsx  View.jsx
(+54 files in other folders)
