[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.17"
neo4rs = "0.5.9"
rand = "0.8.5"
serde = { version = "1.0.151", features = ["derive"] }
simple_logger = "4.0.0"
struct-field-names-as-array = "0.1.4"
uuid = { version = "1.2.2", features = ["v4"] }
